--- a/views/cart.erb
+++ b/views/cart.erb
@@ -10,6 +10,8 @@
 				</tr>
 			  </thead>
 			  <tbody>
+			  <% total_price = 0 %>
+			  <% total_qty = 0 %>
 			  <%@items.each do |item| %>
 				<tr>
 				  <!--th scope="row">1</th-->
@@ -17,7 +19,17 @@
 				  <td><%= item[0].price %></td>
 				  <td><%= item[1] %></td>
 				</tr>
-				<%end%>				
+				<% total_price += item[0].price * item[1].to_i %>
+				<% total_qty += item[1].to_i %>
+				<%end%>	
+
+				<tr>
+				  <!--th scope="row">1</th-->
+				  <td></td>
+				  <td><%= total_price %> $</td>
+				  <td><%= total_qty %></td>
+				</tr>
+
 			  </tbody>
 			</table>
 	
