--- a/views/cart.erb
+++ b/views/cart.erb
@@ -32,4 +32,22 @@
 
 			  </tbody>
 			</table>
-	
+
+<form action = "/place_order" method ="POST" role = "form">
+	<input name="order[order_input]" type="hidden" value="<%= @orders_input %>"/>
+	<div class="form-group">
+		<label> Enter you name: </label>
+		<input name="order[name]" type="text" class="form-control" placeholder="You name">
+	</div>
+
+	<div class="form-group">
+		<label> Enter you phone: </label>
+		<input name="order[phone]" type="text" class="form-control" placeholder="You phone">
+	</div> 
+
+	<div class="form-group">
+		<label> Enter you address: </label>
+		<input name="order[address]" type="text" class="form-control" placeholder="You address">
+	</div>
+
+<button type="submit" class="btn btn-success btn-lg">Place this order!</button>
