--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,7 +45,7 @@
 			    <ul class="nav navbar-nav navbar-right">
 			    <li>  <!--a href="#"> Cart </li-->
 			    	<form action="/cart" method="post">
-			    	<input id="orders_input" name="orders" type="hidden" />
+			    	<input id="orders_input" name="orders_input" type="hidden" />
 			    	<input id="orders_button" type="submit" class="btn btn-primary btn-lg" value="CART (...)" />
 			    	</form>
 <!-- 			        <li class="dropdown">
