--- a/views/cart.erb
+++ b/views/cart.erb
@@ -34,7 +34,7 @@
 			</table>
 
 <form action = "/place_order" method ="POST" role = "form">
-	<input name="order[orders_input]" type="hidden" value=""/>
+	<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>"/>
 	<div class="form-group">
 		<label> Enter you name: </label>
 		<input name="order[name]" type="text" class="form-control" placeholder="You name">
