display card empty

--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,5 +1,6 @@
 <h2> Your cart </h2>
 
+
 <table class="table">
 			  <thead class="thead-light">
 				<tr>
@@ -49,9 +50,11 @@
 		<label> Enter you address: </label>
 		<input name="order[address]" type="text" class="form-control" placeholder="You address">
 	</div>
-
+<div id="cart">
 <button type="submit" class="btn btn-success btn-lg">Place this order!</button>
+</form>
 <button  class="btn btn-danger btn-lg" onclick="return cancel_order()">Clear Cart!</button>
 
 </form>
 
+</div>
