--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+		<link href="/vendor/app.css" rel="stylesheet">
 	    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	    <script src="/vendor/jquery-1.9.1.min.js"></script>
 	    <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -46,7 +46,7 @@
 			    <li>  <!--a href="#"> Cart </li-->
 			    	<form action="/cart" method="post">
 			    	<input id="orders_input" name="orders_input" type="hidden" />
-			    	<input id="orders_button" type="submit" class="btn btn-primary btn-lg" value="CART (...)" />
+			    	<input id="orders_button" type="submit" class="" value="CART (...)" />
 			    	</form>
 <!-- 			        <li class="dropdown">
 			          <a href="#"  data-toggle="dropdown"> Sing In <b class="caret"></b></a>
